# deterministic-memsafety

./: README.md  summarize_dynamic_counts.sh
clang/include/clang/Basic/: CodeGenOptions.def  CodeGenOptions.h
clang/include/clang/Driver/: Options.td
clang/lib/CodeGen/: BackendUtil.cpp
clang/lib/Driver/ToolChains/: Clang.cpp  CommonArgs.cpp  CommonArgs.h  Gnu.cpp
compiler-rt/include/: CMakeLists.txt
compiler-rt/include/sanitizer/: dms_interface.h
compiler-rt/lib/: CMakeLists.txt
compiler-rt/lib/dms/: CMakeLists.txt  DMS.cpp
llvm/include/llvm/IR/: Value.h
llvm/include/llvm/Transforms/Utils/: DLIM.h  DMS.h  DMS_BoundsInfo.h  DMS_BoundsInfos.h  DMS_DynamicResults.h  DMS_IRBuilder.h  DMS_Induction.h  DMS_PointerStatus.h  DMS_PointerStatuses.h  DMS_RuntimeStackSlots.h  DMS_classifyGEPResult.h  DMS_common.h  DMS_mapEquality.h
llvm/lib/IR/: Value.cpp
llvm/lib/Passes/: PassBuilder.cpp  PassRegistry.def
llvm/lib/Transforms/Utils/: CMakeLists.txt  DLIM.cpp  DMS.cpp  DMS_BoundsInfo.cpp  DMS_BoundsInfos.cpp  DMS_DynamicResults.cpp  DMS_IRBuilder.cpp  DMS_Induction.cpp  DMS_PointerStatus.cpp  DMS_PointerStatuses.cpp  DMS_RuntimeStackSlots.cpp  DMS_classifyGEPResult.cpp  DMS_common.cpp
llvm/test/Transforms/DLIM/: basic.ll  blocks.ll  dynamic.ll  loop.ll  struct.ll
llvm/test/Transforms/DLIM/dynamic/: basic.ll  blocks.ll  ptrarith.ll  storeload.ll
llvm/test/Transforms/DMS/: basic.ll  blocks.ll  cmdenv.cpp  extern_global.c  loop.ll  struct.ll
llvm/test/Transforms/DMS/bounds/: bounds.ll  fail_argc.ll  fail_dyndirtyoob.ll  fail_globalstring.ll  fail_simpleheapoob.ll  fail_simplestackoob.ll  fail_storeloadoob.ll  gobmk_cache.c  successes_basic.ll  successes_blocks.ll  successes_fnpovfpu.cpp  successes_fuseki.c  successes_fuzz1.c  successes_fuzz2.c  successes_global_init.c  successes_global_init_2.ll  successes_libc.c  successes_libc.ll
llvm/test/Transforms/DMS/dynamic/: basic.ll  blocks.ll  ptrarith.ll  storeload.ll
